<resources>
    <string name="location">location</string>
    <string name="menu">menu</string>
    <string name="menu_items">Menu Items</string>
    <string name="app_name">MealSteal</string>
    <string-array name="account_type_array">
        <item>Customer</item>
        <item>Merchant</item>
    </string-array>
    <string name="title_activity_brand_add" translatable="false">BrandAdd</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="your_menus">Your Menus</string>
    <string name="your_restaurants">Your Restaurants</string>
    <string name="your_current_orders">Your Current Orders</string>
    <string name="your_order">Your Order</string>
    <string name="subtotal">SubTotal:</string>
    <string name="_0" translatable="false">$0</string>
    <string name="fees">Fees:</string>
    <string name="coupons">Coupons</string>
    <string name="total">Total:</string>
    <string name="receipt">Receipt</string>
    <string name="checkout">CheckOut</string>
    <string name="your_past_orders">Your Past Orders</string>
    <string name="order">Order #</string>
    <string name="order_details">Order Details</string>
    <string name="past_reviews">Past Reviews</string>
    <string name="find_your_next_mealsteal">Find Your Next MealSteal!</string>
    <string name="browse_coupons">Browse Coupons</string>
    <string name="looking_for_some_local_options">Looking for some Local Options?</string>
    <string name="reservations">Reservations</string>
    <string name="check_reviews">Check Reviews</string>
    <string name="create_your_next_mealsteal">Create Your Next MealSteal!</string>
    <string name="create_coupons">Create Coupons</string>
    <string name="your_locations">Your Locations</string>
    <string name="locations">Locations</string>
    <string name="menus">Menus</string>
    <string name="your_menu_items">Your Menu Items</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="welcome_to_mealsteal">Welcome to MealSteal!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="create_a_new_menu">Create a New Menu</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_a_new_dish">Create a New Dish</string>
    <string name="name_of_dish">Name of Dish</string>
    <string name="price">Price</string>
    <string name="menu_item_management">Menu Item Management</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="edit_menu_item">Edit Menu Item</string>
    <string name="delete_menu_item">Delete Menu Item</string>
    <string name="menu_management">Menu Management</string>
    <string name="add_menu">Add Menu</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="delete_menu">Delete Menu</string>
    <string name="save">Save</string>
    <string name="account_info">Account Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="type_your_message_here">Type your message here!</string>
    <string name="check_your_orders">Check Your Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="phone">Phone</string>
    <string name="enter_word">Enter Word</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="register">Register!</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">ZipCode</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="create_a_new_restaurant">Create a New Restaurant</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="restaurant_management">Restaurant Management</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="delete_restaurant">Delete Restaurant</string>
    <string name="set_active_menu">Set Active Menu</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="see_current_reviews">See Current Reviews</string>
    <string name="rate_restaurant">Rate Restaurant</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="upload_images">Upload Images</string>
    <string name="coupon_description">Coupon Description</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="quantity">Quantity:</string>
    <string name="order_date">Order Date</string>
    <string name="received_message">Received message</string>
    <string name="username">Username</string>
    <string name="sent_message">Sent message</string>
    <string name="cart">Cart</string>
    <string name="messages">Messages</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="create_reviews">Create Reviews</string>
    <string name="orders">Orders</string>
    <string name="name">Name</string>
    <string name="filter_by_distance">Filter By Distance</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="add_favorite_restaurants">Add Favorite Restaurants</string>
    <string name="view_favorite_restaurants">View Favorite Restaurants</string>
    <string name="sushi" translatable="false">Sushi</string>
    <string name="pizza" translatable="false">Pizza</string>
    <string name="hamburger" translatable="false">Hamburger</string>
    <string name="curry" translatable="false">Curry</string>
    <string name="fried_chicken" translatable="false">Fried Chicken</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="burrito" translatable="false">Burrito</string>
    <string name="can_t_decide_what_to_eat">Can\'t Decide What To Eat?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="option_6">Option 6</string>
    <string name="input_6_different_options_in_the_boxes_below">Input 6 Different Options in the Boxes Below</string>
    <string name="input_6_different_options_into_the_boxes_below" translatable="false">Input 6 Different Options into the Boxes Below</string>
    <string name="distance">Distance</string>
    <string name="qr_code_generator">QR Code Generator</string>
</resources>