<?xml version="1.0" encoding="utf-8"?>
<!--ScrollView allows the user to be able to scroll the page up or down-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".Registration">

    <!--LinearLayout is used to order each item in a vertical orientation-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="142dp"
        android:src="@drawable/mealsteal" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/etFName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/first_name"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etLName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/last_name"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/email"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etUName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/user_name"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etPWord"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etStreetAddress"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/street_address"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etCity"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/city"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etState"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/state"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etZip"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/zipcode"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:hint="@string/phone"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"/>

    <Spinner
        android:id="@+id/account_type_spinner"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:layout_marginTop="5dp"
        android:spinnerMode="dropdown"
        android:entries="@array/account_type_array" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:background="@drawable/login_btn"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="#d0d3cf"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/signup"
        android:textStyle="bold"
        android:text="@string/admin_mode"/>

    </LinearLayout>
</ScrollView>