<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemMenuItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnAddItem"
            android:background="#f29c45"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnEditItem"
            android:background="#f29c45"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btnViewItem"
            android:background="#f29c45"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/view" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>