<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".RestaurantAdd">
    <!-- This is the general layout to add items that will be used for Restaurant, Menu and Menu Item
     All with their own relative fields of course-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"/>


        <ImageView
            android:id="@+id/dishImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/addimage"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_dish"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:hint="@string/name_of_dish"
            android:layout_marginTop="30dp"
            android:background="@drawable/input" />


        <EditText
            android:id="@+id/etPrice"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:hint="@string/price"
            android:layout_marginTop="30dp"
            android:background="@drawable/input" />


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:hint="Description"
            android:layout_marginTop="30dp"
            android:background="@drawable/input"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/login_btn"
            android:layout_marginTop="15dp"
            android:text="Create"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
