<?xml version="1.0" encoding="utf-8"?>

<!-- This activity will generate a QR Code that will be used in the receipt for specific orders -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRCode"
    android:background="#f29c45">

    <!-- Title of activity -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_generator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Description for user to see -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This Code Will Be Used for the Receipts to Distinguish Orders"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <!-- QR Code is displayed here in the center of the screen -->
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/qrCode"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/qr_code"
        />

    <!-- String is input here to create specific QR code -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/words"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_word"
        android:gravity="center"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/qrCode"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:id="@+id/view1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/words"
        android:background="@color/purple_200"/>
       -->

    <!-- Button used to create the QR Code -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/getCode"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/words"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/generate_qr_code"
        android:backgroundTint="#d0d3cf"
        android:textColor="@color/black"
        />





</androidx.constraintlayout.widget.ConstraintLayout>